<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <net.daum.mf.map.api.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <EditText
        android:id="@+id/et_search_field"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:hint="@string/search_hint"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="7dp"
        android:background="@color/soft_green"
        android:text="@string/btn_search"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/et_search_field"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/mapView"
        tools:ignore="MissingConstraints">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@color/white"
            tools:ignore="MissingConstraints"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_detail_list"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/mapView"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="이름"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_detail_marker"
            android:layout_width="29dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/img_list_marker"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

        <TextView
            android:id="@+id/tv_detail_road"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="도로명"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/iv_detail_marker"
            app:layout_constraintTop_toTopOf="@+id/iv_detail_marker" />

        <TextView
            android:id="@+id/tv_detail_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="전화번호"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/iv_detail_marker"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_road" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton1"
            android:background="@color/white"
            android:layout_marginEnd="30dp"
            android:src="@drawable/img_route"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_name"
            app:layout_constraintBottom_toBottomOf="@+id/iv_detail_marker"
            app:layout_constraintVertical_bias="0.5"/>

        <Button
            android:id="@+id/btn_convenient"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:text="@string/btn_convenient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.25"/>

        <Button
            android:id="@+id/btn_favorite"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:text="@string/btn_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>